<resources>
    <string name="ad_baner_ID" translatable="false">ca-app-pub-9832953507407797/5858035763</string>
    <string name="Ad_in_app_content" translatable="false">ca-app-pub-9832953507407797/7622995452</string>
    <string name="Ad_full_screen" translatable="false">ca-app-pub-9832953507407797/7879023431</string>
    <string name="banner_ID_test" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="Ad_full_screen_test" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="app_name">3D_cube</string>
    <string name="button_2x2">INSTRUKCJA DO  2x2x2</string>
    <string name="button_3x3">INSTRUKCJA DO  3x3x3</string>
    <string name="button_general_info">OZNACZENIA I NOTACJA</string>
    <string name="button_timer">TIMER</string>
    <string name="title">JAK UŁOŻYĆ KOSTKĘ 3D</string>
    <string name="exit_situation">SYTUACJA WYJŚCIOWA</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel">Anuluj</string>
    <string name="yes">Tak</string>
    <string name="not">Nie</string>
    <string name="case1_text">Przypadek 1</string>
    <string name="case2_text">Przypadek 2</string>
    <string name="case3_text">Przypadek 3</string>
    <string name="home">Strona główna</string>
    <string name="introduction_main_page">Zanim rozpoczniesz układanie kostki zapoznaj się z oznaczeniami używanymi w algorytmach układania kostek.
        Myślę, że poniższe obrazki wyjaśnią wszystko. Zasadą w oznaczaniu ruchów jest, że patrząc na ściankę od przodu,
        przekręcenie jej 1 raz(o 90 stopni) zgodnie z ruchem wskazówek zegara oznaczane jest pojedynczą literą oznaczającą ściankę która ma być przekręcona.
        Czyli np. \"F\" oznacza przekręcenie 1 raz przedniej(frontowej) ścianki ( \"F\" od angielskiego \"front\" czyli przód) zgodnie ze wskazówkami zegara.
        F\' oznacz ruch przeciwny - czyli przekręcenie przedniej ścianki przeciwnie do ruchu wskazówek zegara.  Dokładnie ta sama zasada dotyczy wszystkich pozostałych ścianek.
        Czyli np. ruch przeciwny do U(up-góra) to U\'. Ruch przeciwny do L(left-lewy) to L\' itd.</string>
    <string name="step1">Krok 1</string>
    <string name="step1_effect">EFEKT KROKU 1</string>
    <string name="step1_text1">Jeśli nie znasz jeszcze notacji stosowanej przy układaniu kostki, wróć do strony startowej i wejdź w zakładkę "Oznaczenia i notacja". Układanie kostki zaczynamy od ułożenia krzyża na górnej ściance. U nas będzie to krzyż koloru niebieskiego. Układamy go tak aby boki krzyża pasowały kolorami do środków bocznych ścianek, jak to pokazuje rysunek poniżej.</string>
    <string name="step1_text2">Krok ten jest bardzo prosty i intuicyjny. Jedyny problem jaki może się pojawić pokazano wraz z rozwiązaniem na rysunku poniżej.</string>
    <string name="step2">Krok 2</string>
    <string name="step2_effect">EFEKT KROKU 2</string>
    <string name="step2_text1">W tym kroku zajmiemy się ułożeniem narożników górnej ścianki, jak pokazano na poniższym rysunku.</string>
    <string name="step2_text2">W zależności od ułożenia dolnego narożnika, możesz spotkać 3 przypadki:</string>
    <string name="step3">Krok 3</string>
    <string name="step3_effect">EFEKT KROKU 3</string>
    <string name="step3_text1">Gdy masz gotowy poprzedni etap przekręć środkową warstwę tak aby środkowe klocki bocznych ścianek znajdowały się pod obwódką z odpowiednim kolorem tworząc literę \"T\"  - jak na rysunku poniżej w \"sytuacji wyjściowej\".</string>
    <string name="step3_text3">Powyższy algorytm \'wkładając\' klocki w prawo jest wystarczający do ułożenia całej drugiej warstwy.
        Jeśli jednak chcesz zwiększyć szybkość układania kostki, dobrze jest znać również algorytm,którym możemy przestawiać klocki w drugą stronę(czyli w lewo) jak na ilustracji poniżej.</string>
    <string name="step4">Krok 4</string>
    <string name="step4_effect">EFEKT KROKU 4</string>
    <string name="step4_text2">W efekcie powinno się otrzymać literę \"L\"  którą należy teraz ustawić jak na obrazku poniżej i wykonać algorytm jeszcze raz uzyskując gotowy krzyż.</string>
    <string name="step4_text3">Jeśli coś nie jest jasne, popatrz na poniższy rysunek gdzie pokazano co się dzieje na kostce po każdym wykonaniu algorytmu(przedstawiono najgorszą sytuację gdy potrzeba będzie wykonać algorytm 3 razy aby uzyskać końcowy efekt).
        Pamiętaj aby ustawić odpowiednio kostkę gdy będziesz miał już literę \"L\" jak pokazano na obrazku powyżej!!</string>
    <string name="step5">Krok 5</string>
    <string name="step5_effect">EFEKT KROKU 5</string>
    <string name="step5_text2">Poniższym algorytmem jesteśmy w stanie zamieniać dwa klocki w sąsiadujących ściankach. W zależności od sytuacji na kostce, być może będzie trzeba wykonać ten algorytm kilka razy.
        W efekcie powinniśmy otrzymać cały krzyż  z pasującymi ściankami bocznymi.</string>
    <string name="step5_text3">Jeśli coś nie jest jasne popatrz proszę na poniższy rysunek.
        Przedstawia on najgorszą sytuację gdy trzeba będzie algorytm wykonać 3 razy aby wszystkie elementy krzyża znalazły się na swoich miejscach. Pamiętaj przy każdym
        wykonywaniu algorytmu o trzymaniu kostki w odpowiedniej pozycji(jak na rysunku z \'oczkiem\' powyżej).</string>
    <string name="step6">Krok 6</string>
    <string name="step6_effect">EFEKT KROKU 6</string>
    <string name="step6_text1">Gratuluję! Dojście do tego kroku oznacza, że jesteś bardzo blisko ułożenia całej kostki. Poniższy  algorytm ustawi nam narożniki górnej warstwy w odpowiednich miejscach. Narożniki na razie nie muszą przylegać odpowiednimi kolorami do bocznych ścianek. Ważne aby znalazły się tylko na odpowiednich pozycjach(np. narożny klocek na styku ścianek: czerwonej-żółtej-niebieskiej powinien składać się z kolorów: czerwonego-żółtego-niebieskiego itd.).</string>
    <string name="step6_text2">Jeśli żaden z narożników nie jest na swoim miejscu, wykonaj raz poniższy algorytm. W efekcie powinieneś otrzymać przynajmniej jeden narożnik na właściwej pozycji.</string>
    <string name="step6_text3">Zobacz teraz który narożnik ustawił się w prawidłowej pozycji i ustaw kostkę tak aby patrząc na nią od przodu, ustawiony już narożnik znajdował się w lewym-górnym rogu kostki (jak na obrazku poniżej).
        Następnie w zależności od ustawienia pozostałych narożników, wykonaj algorytm jeden lub dwa razy, a wszystkie narożniki ustawią się w odpowiednich pozycjach.</string>
    <string name="step6_text5">Jeśli coś się nie udało, nie zrażaj się i spróbuj jeszcze raz. Ten krok to najtrudniejsza część w układaniu kostki. Za to ostatni, siódmy algorytm jest banalnie prosty!</string>
    <string name="step7">Krok 7</string>
    <string name="step7_effect">EFEKT KROKU 7</string>
    <string name="step7_text1">W ostatnim kroku zajmiemy się orientacją narożników. Tzn. przekręcimy narożniki w taki sposób aby zgadzały się kolorami z przylegającymi do nich ściankami (zobacz obrazek poniżej).</string>
    <string name="step7_text2">Wykonaj zatem prosty algorytm z poniższego obrazka 2 lub 4 razy - aż do ułożenia przestawianego klocka w odpowiedniej pozycji.</string>
    <string name="step7_text3">Następnie przekręć górną warstwę przeciwnie do ruchu wskazówek zegara(czyli U\' jak na rysunku poniżej) tyle razy aby następny nieułożony narożnik znalazł się w pozycji do wykonania algorytmu(ponownie 2 lub 4 razy).</string>
    <string name="step7_text4">Powtórz tą operację dla kolejnych nieułożonych narożników. Po ułożeniu danego narożnika zawsze przekręcaj górną warstwę w kierunku U\' aby ustawić kolejny narożnik do wykonania algorytmu.
        Postępuj tak aż do całkowitego ułożenia kostki!</string>
    <string name="step7_text5">UWAGA!!!</string>
    <string name="step7_text6">W trakcie wykonywania tych kroków kostka będzie wyglądała tak jakby wszystko się pomieszało. Nie przejmuj się tym - tak ma być! Wszystko wróci na swoje pozycje :)))</string>
    <string name="step7_text7">Jeśli jednak nie do końca to rozumiesz, zobacz proszę rysunek poniżej. Przedstawiono tam przykładową sytuację gdzie musimy przekręcić wszystkie cztery narożniki. Przez \'OK\' oznaczono narożniki, które się ułożyły po zastosowaniu algorytmu.
        Zauważ, że w międzyczasie kostka faktycznie wygląda na pomieszaną!!! Ale ostatecznie wszystko wraca na swoje miejsce!</string>
    <string name="dwa_step1_text1">Jeśli nie znasz notacji stosowanej w instrukcjach do kostek, zanim rozpoczniesz krok 1, koniecznie zobacz zakładkę "Oznaczenia i notacja".</string>
    <string name="dwa_step1_text2">Układanie kostki 2x2 rozpoczynamy od ułożenia jednej ścianki (np. zielonej) z przylegającymi do niej kolorami, jak na rysunku powyżej. Etap ten jest prosty i każdy powinien sobie z nim sam poradzić. Jednak w razie problemów, pomocny będzie poniższy algorytm, który przesuwa zielony klocek z dolnej na górną warstwę, pozostawiając 3 klocki górnej warstwy w niezmienionym położeniu.</string>
    <string name="dwa_step1_text3">Możesz trafić na jeden z 3 przypadków, jak to pokazano poniżej.</string>
    <string name="dwa_step2_text1">Na początek tego etapu przekręć kostkę o 180 stopni, tak aby ułożona w pierwszym kroku zielona ścianka znalazła się na dole kostki.</string>
    <string name="dwa_step2_text2">Teraz będziemy przenosić wszystkie niebieskie klocki na górną warstwę, jak to pokazano na powyższym obrazku.
        Na razie nie obchodzi nas czy ścianki boczne będą pasować czy nie. Dopasowaniem ich zajmiemy się w ostatnim kroku.
        </string>
    <string name="dwa_step2_text3">W tym kroku spotkasz się z jednym z 7 przypadków. Każdy został pokazany poniżej wraz z algorytmem, który należy zastosować.
        Pamiętaj aby właściwie ustawić kostkę bo inaczej algorytm nie zadziała.
        Sposób ustawienia pokazano poniżej dla przypadku 1. Dla wszystkich innych przypadków ustawiaj kostkę analogicznie.</string>
    <string name="dwa_step2_text5">Przypadki 2-7</string>
    <string name="dwa_step3_text1">To już ostatni krok, w który ułożymy całą kostkę jak pokazano na obrazku poniżej ;))</string>
    <string name="dwa_step3_text2">Etap ten polega na zamianie miejscami narożników. Możemy spotkać tutaj tylko 2 przypadki. Do każdego z przypadków, algorytm pokazano poniżej. Powodzenia!!  Aaa... i nie zapomnij ocenić aplikacji. Dzięki!</string>
    <string name="timer_show_scores_table">Tabela wyników</string>
    <string-array name="spinner_choose_cube">
        <item>3x3</item>
        <item>2x2</item>
    </string-array>
    <string name="best_time_text">Najlepszy czas:</string>
    <string name="worst_time_text">Najgorszy czas:</string>
    <string name="language_title">WYBIERZ JĘZYK:</string>
    <string name="english" translatable="false">english</string>
    <string name="chinese" translatable="false">中文</string>
    <string name="french" translatable="false">français</string>
    <string name="german" translatable="false">Deutsch</string>
    <string name="hindi" translatable="false">हिंदी</string>
    <string name="polish" translatable="false">Polski</string>
    <string name="portuguese" translatable="false">Português</string>
    <string name="russian" translatable="false">русский</string>
    <string name="spanish" translatable="false">"Español "</string>
    <string name="italian" translatable="false">Italiana</string>
    <string name="turkish" translatable="false">Türk</string>
    <string name="czech" translatable="false">čeština</string>
    <string name="hungary" translatable="false">Magyar</string>
    <string name="tajland" translatable="false">ไทย</string>
    <string name="romanian" translatable="false">Română</string>
    <string name="greek" translatable="false">Ελληνικά</string>
    <string name="japanese" translatable="false">日本語</string>
    <string name="vietnamese" translatable="false">Tiếng Việt</string>
    <string name="bengal" translatable="false">বাংলা</string>
</resources>