<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="2dp"
    android:paddingRight="2dp">

    <TextView
        android:id="@+id/step7_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/step7_text1"
        android:textAlignment="viewStart"
        android:textColor="@color/primary_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <LinearLayout
        android:id="@+id/layout_exit_effect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/step7_exit_text"
            android:text="@string/exit_situation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textAlignment="center"
            android:textColor="@color/primary_text"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/step7_effect_text"
            android:text="@string/step7_effect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textAlignment="center"
            android:textColor="@color/primary_text"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>



    <ImageView
        android:id="@+id/step7_exit_effect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/step5_exit_effect" />


    <TextView
        android:id="@+id/step7_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/step7_text2"
        android:textAlignment="viewStart"
        android:textColor="@color/primary_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageView
        android:id="@+id/step7_alg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/step5_alg1_1" />

    <ImageView
        android:id="@+id/step7_moves"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/step5_moves"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/step7_text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/step7_text3"
        android:textAlignment="viewStart"
        android:textColor="@color/primary_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageView
        android:id="@+id/step7_alg1_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/step5_alg1_2" />

    <TextView
        android:id="@+id/step7_text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/step7_text4"
        android:textAlignment="viewStart"
        android:textColor="@color/primary_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/step7_text5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/attention_background"
        android:text="@string/step7_text5"
        android:textAlignment="center"
        android:textColor="@color/primary_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/step7_text6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/step7_text6"
        android:textAlignment="viewStart"
        android:textColor="@color/primary_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/step7_text7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/step7_text7"
        android:textAlignment="viewStart"
        android:textColor="@color/primary_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/step7_explanation1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/step5_explanation1" />

    <ImageView
        android:id="@+id/step7_explanation2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/step5_explanation2"
        android:layout_marginBottom="100dp"/>


</LinearLayout>